--- a/src/app/components/Header/Buttons.module.css
+++ b/src/app/components/Header/Buttons.module.css
@@ -13,3 +13,8 @@
   padding-block: 0.8rem;
   cursor: pointer;
 }
+
+.button:hover {
+  color: var(--clr-neutral);
+  background-color: var(--clr-primary-400);
+}
